SQL update for order record(receipt), checkout Service Charge

--- a/admin/src/lang/en-us.json
+++ b/admin/src/lang/en-us.json
@@ -95,7 +95,7 @@
   "pendingOrders": "Pending Orders",
   "markedAsDoneOrders": "Marked as Done",
   "orderNumber": "Order No.",
-  "item": "Item",
+  "item": "Order",
   "customization": "Customization",
   "customPrice": "Custom Price",
   "quantity": "Quantity",
@@ -140,5 +140,29 @@
   "fetchDataFailed": "Failed to fetch data",
   "editMenu": "Edit Menu - ",
   "addMenu": "Add Menu",
-  "uploadImage": "Upload Image(PNG, JPG)"
+  "uploadImage": "Upload Image(PNG, JPG)",
+  "checkout": "Checkout",
+  "table": "Table",
+  "pendingItems": "Pending Orders",
+  "completedItems": "Completed Orders",
+  "totalPrice": "Total Price",
+  "subtotal": "Subtotal",
+  "total": "Total",
+  "print": "Print",
+  "noOrdersAvailable": "No Orders Available",
+  "checkBackLater": "Check back later for new orders",
+  "checkoutSuccessful": "Checkout Successful",
+  "checkoutFailed": "Checkout Failed",
+  "checkoutConfirmTitle": "Confirm Checkout",
+  "checkoutConfirmContent": "Are you sure you want to checkout this table?",
+  "checkoutConfirmWithPending": "There are pending orders not marked as completed. Do you still want to checkout?",
+  "printing": "Printing table",
+  "refresh": "Refresh",
+  "dataRefreshed": "Data refreshed",
+  "lastRefresh": "Last refreshed at",
+  "serviceCharge": "Service Charge",
+  "finalTotal": "Final Total",
+  "fetchSystemProfileFailed": "Failed to fetch system settings",
+  "exemptServiceCharge": "Exempt Service Charge",
+  "includeServiceCharge": "Include Service Charge"
 }
