--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -95,7 +95,7 @@
   "pendingOrders": "待處理訂單",
   "markedAsDoneOrders": "標記為完成",
   "orderNumber": "訂單編號",
-  "item": "項目",
+  "item": "訂單",
   "customization": "特製內容",
   "customPrice": "特製價格",
   "quantity": "數量",
@@ -132,7 +132,7 @@
   "systemSettings": "系統設定",
   "disableOrdering": "停用點餐",
   "requireServiceCharge": "需要服務費",
-  "requireFactoryEmployeeCheck": "需要工廠員工檢查",
+  "requireFactoryEmployeeCheck": "需要工廈員工確認",
   "save": "保存",
   "updateSettingsSuccess": "系統設定更新成功",
   "updateSettingsFailed": "系統設定更新失敗",
@@ -140,5 +140,29 @@
   "fieldRequired": "此字段為必填",
   "editMenu": "編輯菜單 - ",
   "addMenu": "新增菜單",
-  "uploadImage": "上傳圖片(PNG, JPG)"
+  "uploadImage": "上傳圖片(PNG, JPG)",
+  "checkout": "結帳",
+  "table": "桌號",
+  "pendingItems": "待處理訂單",
+  "completedItems": "已完成訂單",
+  "totalPrice": "總價格",
+  "subtotal": "小計",
+  "total": "總計",
+  "print": "列印",
+  "noOrdersAvailable": "沒有可用訂單",
+  "checkBackLater": "請稍後查看新訂單",
+  "checkoutSuccessful": "結帳成功",
+  "checkoutFailed": "結帳失敗",
+  "checkoutConfirmTitle": "確認結帳",
+  "checkoutConfirmContent": "確定要結帳此桌號嗎？",
+  "checkoutConfirmWithPending": "還有未標記為完成的訂單，是否仍然結賬？",
+  "printing": "正在列印桌號",
+  "refresh": "刷新",
+  "dataRefreshed": "數據已更新",
+  "lastRefresh": "最後刷新時間",
+  "serviceCharge": "服務費",
+  "finalTotal": "最終總額",
+  "fetchSystemProfileFailed": "無法獲取系統設定",
+  "exemptServiceCharge": "免除服務費",
+  "includeServiceCharge": "包含服務費"
 }
